# timelining

./: .gitignore  eslint.config.mjs  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json  vercel.json
.github/workflows/: set-telegram-webhook.yml
.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
.next/cache/: .rscinfo  .tsbuildinfo  config.json
.next/cache/eslint/: .cache_1r5x8r2
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/chunks/: 176.js  300.js  703.js  778.js  824.js  876.js  877.js  911.js  989.js
.next/server/pages/: _app.js  _app.js.nft.json  _document.js  _document.js.nft.json  _error.js  _error.js.nft.json
.next/static/90Ykb3_3_XJkWHsGvpYz4/: _buildManifest.js
.next/static/GTERoY7Yj-VE4wjT_mgFn/: _buildManifest.js
api/: webhook.py  worker.py  worker_script.py
scripts/: setWebhook.ts
src/__tests__/: worker.test.ts
src/api/: schedule-manager.tsx  webhook.ts  webhook.tsx  worker.ts  worker.tsx
src/lib/: telegram.ts  utils.ts
src/lib/db/: entries.ts  mappers.ts  (+3 more)
src/scripts/: workerScript.ts
src/services/: entryService.ts  pageService.ts
src/worker/: handlerInterface.ts  index.ts  process.ts
test/tests/: entry.test.ts  webhook.test.ts  worker.test.ts
tests/: webhook.test.ts  worker.test.ts
(+85 files in other folders)
