[tool.poetry]
name = "timelining"
version = "0.1.0"
description = "Timelining bot system"
authors = ["Tobias Fechner <tobias.fechner@hotmail.co.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
python-telegram-bot = "^21.11.1"
fastapi = "^0.115.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
